--- a/microfire/src/main/resources/application.properties
+++ b/microfire/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#server.address=127.0.0.1
-#server.port=8081
+server.address=127.0.0.1
+server.port=8081
 
 ## FOR EXTERNAL MYSQL DB
 #spring.jpa.hibernate.ddl-auto = validate
@@ -13,11 +13,11 @@
 
 
 
-#server.address=127.0.0.1
-server.port=8081
-
-## PostgreSQL
-spring.jpa.hibernate.ddl-auto=create
+##server.address=127.0.0.1
+#server.port=8081
+#
+### PostgreSQL
+#spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.url=jdbc:postgresql://127.0.0.1:55432/db
 #spring.datasource.username=tp
 #spring.datasource.password=tp
