--- a/microfire/pom.xml
+++ b/microfire/pom.xml
@@ -73,6 +73,18 @@
 		   	<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		
+		<dependency>
+	      	<groupId>org.springframework.boot</groupId>
+	      	<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+	    </dependency>
+	    
+	    <dependency>
+	      	<groupId>com.projetmajeurfire</groupId>
+			<artifactId>CommonDtoTools</artifactId>
+	    </dependency>
+		
 	</dependencies>
 
 	<build>
