--- a/microvehicle/pom.xml
+++ b/microvehicle/pom.xml
@@ -71,6 +71,18 @@
 		   	<groupId>org.springframework.boot</groupId>
 		   	<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
+		
+		<dependency>
+	      	<groupId>org.springframework.boot</groupId>
+	      	<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+	    </dependency>
+	    
+		<dependency>
+	      	<groupId>com.projetmajeurfire</groupId>
+			<artifactId>CommonDtoTools</artifactId>
+	    </dependency>
 	
 </dependencies>
 
