--- a/microtower/src/main/resources/application.properties
+++ b/microtower/src/main/resources/application.properties
@@ -14,10 +14,10 @@
 
 
 #server.address=127.0.0.1
-server.port=8081
+server.port=8082
 
 ## PostgreSQL
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.url=jdbc:postgresql://127.0.0.1:55432/db
 #spring.datasource.username=tp
 #spring.datasource.password=tp
