--- a/microtower/bin/src/main/resources/application.properties
+++ b/microtower/bin/src/main/resources/application.properties
@@ -17,7 +17,7 @@
 server.port=8081
 
 ## PostgreSQL
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.url=jdbc:postgresql://127.0.0.1:55432/db
 #spring.datasource.username=tp
 #spring.datasource.password=tp
