--- a/microtower/pom.xml
+++ b/microtower/pom.xml
@@ -4,7 +4,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ufc</groupId>
-	<artifactId>microvehicle</artifactId>
+	<artifactId>microtower</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
