--- a/microvehicle/pom.xml
+++ b/microvehicle/pom.xml
@@ -20,8 +20,15 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-	
+
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20220320</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.project</groupId>
 			<artifactId>fire-simulator-public</artifactId>
